--- a/태연Pjt/opgg.html
+++ b/태연Pjt/opgg.html
@@ -19,132 +19,135 @@
     ></script>
   </head>
   <body style="background-color: #5383e8">
-    <nav
-      class="navbar"
-      style="height: 40px; padding: 0;background-color: #232f46;"
-    >
-      <div
-        style="height: 40px; width: 98px; padding: 12px 0px; background-color: #5383e8"
-      >
-        <img
-          src="https://opgg-static.akamaized.net/images/gnb/svg/00-opgglogo.svg"
-          style="width: 65px; height: 16px; margin-bottom: 12px; margin-left: 16.5px"
-        />
-      </div>
-      <div class="dropdown" style="float: left">
-        <button
-          class="btn btn-secondary dropdown-toggle"
-          style="background-color: #232f46"
-          href="#"
-          type="button"
-          role="button"
-          data-toggle="dropdown"
-          aria-haspopup="true"
-          aria-expanded="false"
-        >
-          <img
-            src="https://opgg-static.akamaized.net/images/gnb/img/icon-navi-lol.png"
-            style="height:24px; width:24px"
-          />
-          <span style="font: 12px Roboto">League of Legends</span>
-        </button>
-        <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
-          <a class="dropdown-item" href="#">Action</a>
-          <a class="dropdown-item" href="#">Another action</a>
-          <a class="dropdown-item" href="#">Something else here</a>
-        </div>
-      </div>
-      <div style="height: 40px">
+    <!-- header -->
+    <div>
+      <div style="height: 39px; background-color: #232f46;">
         <div
-          style="height: 40px; width: 66.5px; margin-right: 15px; float: right"
+          style="height: 100%; width: 97px; padding-top: 10px; padding-bottom: 10px; background-color: #5383e8; float: left;"
         >
-          <input class="btn btn-primary" type="button" value="로그인" />
-        </div>
-        <div style="height: 40px; width: 112px; padding: 0px 8px; float: right">
           <img
-            src="https://opgg-static.akamaized.net/images/icon-language@2x.png"
-            style="height: 24px; width: 24px; margin-top: 8px"
+            src="https://opgg-static.akamaized.net/images/gnb/svg/00-opgglogo.svg"
+            style="width: 65px; height: 16px; position: relative; left: 16px; bottom: 4.5px"
           />
-          <div
-            class="dropdown"
-            style="padding: 0; margin-left: 24px; margin-top: -30px"
+        </div>
+        <span class="dropdown">
+          <button
+            class="btn dropdown-toggle"
+            style="background-color: #232f46; color: white; height: 100%;"
+            href="#"
+            type="button"
+            role="button"
+            data-toggle="dropdown"
+            aria-haspopup="true"
+            aria-expanded="false"
           >
-            <a
-              class="btn btn-secondary dropdown-toggle"
-              style="background-color: #232f46"
-              href="#"
-              role="button"
-              data-toggle="dropdown"
-              aria-haspopup="true"
-              aria-expanded="false"
+            <img
+              src="https://opgg-static.akamaized.net/images/gnb/img/icon-navi-lol.png"
+              style="height:24px; width:24px"
+            />
+            <span style="font: 12px Roboto;">League of Legends</span>
+          </button>
+          <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
+            <a class="dropdown-item" href="#">Action</a>
+            <a class="dropdown-item" href="#">Another action</a>
+            <a class="dropdown-item" href="#">Something else here</a>
+          </div>
+        </span>
+        <div style="height: 40px">
+          <div
+            style="height: 40px; width: 66.5px; margin-right: 15px; float: right"
+          >
+            <input class="btn btn-primary" type="button" value="로그인" />
+          </div>
+          <div
+            style="height: 40px; width: 112px; padding: 0px 8px; float: right"
+          >
+            <img
+              src="https://opgg-static.akamaized.net/images/icon-language@2x.png"
+              style="height: 24px; width: 24px; margin-top: 8px"
+            />
+            <div
+              class="dropdown"
+              style="padding: 0; margin-left: 24px; margin-top: -30px"
             >
-              <span style="font: 12px Roboto">한국어</span>
-            </a>
+              <a
+                class="btn btn-secondary dropdown-toggle"
+                style="background-color: #232f46"
+                href="#"
+                role="button"
+                data-toggle="dropdown"
+                aria-haspopup="true"
+                aria-expanded="false"
+              >
+                <span style="font: 12px Roboto">한국어</span>
+              </a>
 
-            <div class="dropdown-menu" aria-labelledby="dropdownMenuLink">
-              <a class="dropdown-item" href="#">Action</a>
-              <a class="dropdown-item" href="#">Another action</a>
-              <a class="dropdown-item" href="#">Something else here</a>
+              <div class="dropdown-menu" aria-labelledby="dropdownMenuLink">
+                <a class="dropdown-item" href="#">Action</a>
+                <a class="dropdown-item" href="#">Another action</a>
+                <a class="dropdown-item" href="#">Something else here</a>
+              </div>
             </div>
           </div>
         </div>
       </div>
-    </nav>
-    <div style="margin: 0px 98px; height: 48px">
-      <a href="https://naver.com"
-        ><div style="display: inline-block; margin-top: 12px">
-          <span style="color: white">홈</span>
-        </div></a
-      >
-      <a href="https://naver.com"
-        ><div
-          style="display: inline-block; margin-top: 12px; margin-left: 20px"
+      <div style="margin: 0px 98px; height: 48px">
+        <a href="https://naver.com"
+          ><div style="display: inline-block; margin-top: 12px">
+            <span style="color: white">홈</span>
+          </div></a
         >
-          <span style="color: white">잼피언 분석</span>
-        </div></a
-      >
-      <a href="https://naver.com"
-        ><div
-          style="display: inline-block; margin-top: 12px; margin-left: 20px"
+        <a href="https://naver.com"
+          ><div
+            style="display: inline-block; margin-top: 12px; margin-left: 20px"
+          >
+            <span style="color: white">잼피언 분석</span>
+          </div></a
         >
-          <span style="color: white">통계</span>
-        </div></a
-      ><a href="https://naver.com"
-        ><div
-          style="display: inline-block; margin-top: 12px; margin-left: 20px"
-        >
-          <span style="color: white">랭킹</span>
-        </div></a
-      ><a href="https://naver.com"
-        ><div
-          style="display: inline-block; margin-top: 12px; margin-left: 20px"
-        >
-          <span style="color: white">프로관전</span>
-        </div></a
-      ><a href="https://naver.com"
-        ><div
-          style="display: inline-block; margin-top: 12px; margin-left: 20px"
-        >
-          <span style="color: white">커뮤니티</span>
-        </div></a
-      >
-    </div>
-    <div style="height: 40px; background-color: rgba(0, 0, 0, 0.5)">
-      <div style="height: 40px; margin: 0px 208px">
-        <span style="font-size: 12px; color: white"
-          >오피지지와 함께하는 '한글날' 기념 로고 공모전. 많은 참여
-          부탁드립니다. 9.10.~9.29.</span
+        <a href="https://naver.com"
+          ><div
+            style="display: inline-block; margin-top: 12px; margin-left: 20px"
+          >
+            <span style="color: white">통계</span>
+          </div></a
+        ><a href="https://naver.com"
+          ><div
+            style="display: inline-block; margin-top: 12px; margin-left: 20px"
+          >
+            <span style="color: white">랭킹</span>
+          </div></a
+        ><a href="https://naver.com"
+          ><div
+            style="display: inline-block; margin-top: 12px; margin-left: 20px"
+          >
+            <span style="color: white">프로관전</span>
+          </div></a
+        ><a href="https://naver.com"
+          ><div
+            style="display: inline-block; margin-top: 12px; margin-left: 20px"
+          >
+            <span style="color: white">커뮤니티</span>
+          </div></a
         >
       </div>
+      <div style="height: 40px; background-color: rgba(0, 0, 0, 0.5)">
+        <div style="height: 40px; margin: 0px 208px">
+          <span style="font-size: 12px; color: white"
+            >오피지지와 함께하는 '한글날' 기념 로고 공모전. 많은 참여
+            부탁드립니다. 9.10.~9.29.</span
+          >
+        </div>
+      </div>
     </div>
+    <!-- main -->
     <div
-      style="width: 1080px; height: 1137.8px; margin: 0px 208px; padding: 0px 0px 120px"
+      style="width: 1080px; height: 1150px; margin: 0px 208px; padding: 0px 0px 120px"
     >
       <div style="height:256px; padding: 32px 0px 24px">
         <div style="height: 200px">
           <img
             src="https://attach.s.op.gg/logo/20190910182701.02d5a0a2d3475bd70a773bc1fb21a441.png"
-            style="width 410px; height: 200px; margin: 0px 334px 0px 334px"
+            style="width: 410px; height: 200px; margin: 0px 334px 0px 334px"
           />
         </div>
       </div>
@@ -153,7 +156,6 @@
           style="height: 49.8px; width: 624px"
           type="text"
           placeholder="소환사명, 소환사명, ..."
-          <img
           src=""
         />
       </div>
@@ -459,48 +461,48 @@
           </div>
         </div>
       </div>
-      <div style="width: 1080px; height: 118.9px; padding: 40px 0px">
-        <div>
-          <span style="font-size: 12px; color: white">About OP.GG</span>
-          <span style="font-size: 12px; color: white; margin-left: 16px"
-            >로고 히스토리</span
-          >
-          <span style="font-size: 12px; color: white; margin-left: 16px"
-            ><b>개인정보처리방침</b></span
-          >
-          <span style="font-size: 12px; color: white; margin-left: 16px"
-            >도움말</span
-          >
-          <span style="font-size: 12px; color: white; margin-left: 16px"
-            >제휴</span
-          >
-          <span style="font-size: 12px; color: white; margin-left: 16px"
-            >문의/피드백</span
-          >
-          <span style="font-size: 12px; color: white; margin-left: 16px"
-            >채용</span
-          >
-        </div>
-        <div>
-          <span style="font-size: 12px; color: white"
-            ><b>© 2012-2019 OP.GG. Data based on League of Legends Korea.</b>
-          </span>
-          <i
-            class="fab fa-facebook-square"
-            style="color: white; float: right; margin-left: 10px"
-          ></i>
-          <i
-            class="fab fa-instagram"
-            style="color: white; float: right; margin-left: 10px"
-          ></i>
-          <i class="fab fa-twitter" style="color: white; float: right"></i>
+    </div>
+    <!-- footer -->
+    <div>
+      <div>
+        <div style="width: 1080px; height: 118.9px; padding: 40px 0px">
+          <div>
+            <span style="font-size: 12px; color: white">About OP.GG</span>
+            <span style="font-size: 12px; color: white; margin-left: 16px"
+              >로고 히스토리</span
+            >
+            <span style="font-size: 12px; color: white; margin-left: 16px"
+              ><b>개인정보처리방침</b></span
+            >
+            <span style="font-size: 12px; color: white; margin-left: 16px"
+              >도움말</span
+            >
+            <span style="font-size: 12px; color: white; margin-left: 16px"
+              >제휴</span
+            >
+            <span style="font-size: 12px; color: white; margin-left: 16px"
+              >문의/피드백</span
+            >
+            <span style="font-size: 12px; color: white; margin-left: 16px"
+              >채용</span
+            >
+          </div>
+          <div>
+            <span style="font-size: 12px; color: white"
+              ><b>© 2012-2019 OP.GG. Data based on League of Legends Korea.</b>
+            </span>
+            <i
+              class="fab fa-facebook-square"
+              style="color: white; float: right; margin-left: 10px"
+            ></i>
+            <i
+              class="fab fa-instagram"
+              style="color: white; float: right; margin-left: 10px"
+            ></i>
+            <i class="fab fa-twitter" style="color: white; float: right"></i>
+          </div>
         </div>
       </div>
     </div>
   </body>
-  <style>
-    body :hover {
-      background-color: red;
-    }
-  </style>
 </html>
