--- a/태연Pjt/opgg.html
+++ b/태연Pjt/opgg.html
@@ -4,23 +4,12 @@
     <meta charset="UTF-8" />
     <!--<meta name="viewport" content="width=device-width, initial-scale=1.0" />-->
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <title>Document</title>
-    <script src="https://use.fontawesome.com/releases/v5.2.0/js/all.js"></script>
-    <link
-      rel="stylesheet"
-      href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
-      integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T"
-      crossorigin="anonymous"
-    />
-    <script
-      src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
-      integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
-      crossorigin="anonymous"
-    ></script>
+    <title>롤 전적 검색 OP.GG - 전적 검색 사이트</title>
   </head>
   <body style="background-color: #5383e8">
     <!-- header -->
     <div>
+      <!-- first line -->
       <div style="height: 39px; background-color: #232f46;">
         <div
           style="height: 100%; width: 97px; padding-top: 10px; padding-bottom: 10px; background-color: #5383e8; float: left;"
@@ -33,8 +22,8 @@
         <span class="dropdown">
           <button
             class="btn dropdown-toggle"
-            style="background-color: #232f46; color: white; height: 100%;"
-            href="#"
+            style="color: white; height: 100%;"
+            id="dropdownMenuButton"
             type="button"
             role="button"
             data-toggle="dropdown"
@@ -51,35 +40,33 @@
             <a class="dropdown-item" href="#">Action</a>
             <a class="dropdown-item" href="#">Another action</a>
             <a class="dropdown-item" href="#">Something else here</a>
+            <a class="dropdown-item" href="#">Action</a>
+            <a class="dropdown-item" href="#">Action</a>
+            <a class="dropdown-item" href="#">Action</a>
           </div>
         </span>
-        <div style="height: 40px">
-          <div
-            style="height: 40px; width: 66.5px; margin-right: 15px; float: right"
-          >
-            <input class="btn btn-primary" type="button" value="로그인" />
-          </div>
-          <div
-            style="height: 40px; width: 112px; padding: 0px 8px; float: right"
-          >
+        <span
+          style="height: 100%; width: 200px; float: right; margin-right: 6px;"
+        >
+          <span style="height: 100%; width: 140px;">
             <img
               src="https://opgg-static.akamaized.net/images/icon-language@2x.png"
-              style="height: 24px; width: 24px; margin-top: 8px"
+              style="height: 24px; width: 24px;"
             />
-            <div
-              class="dropdown"
-              style="padding: 0; margin-left: 24px; margin-top: -30px"
-            >
+            <span class="dropdown">
               <a
-                class="btn btn-secondary dropdown-toggle"
-                style="background-color: #232f46"
+                class="btn dropdown-toggle"
+                style="color: white"
                 href="#"
                 role="button"
                 data-toggle="dropdown"
                 aria-haspopup="true"
                 aria-expanded="false"
               >
-                <span style="font: 12px Roboto">한국어</span>
+                <span
+                  style="font: 12px Roboto; position: relative; bottom: 1.5px"
+                  >한국어</span
+                >
               </a>
 
               <div class="dropdown-menu" aria-labelledby="dropdownMenuLink">
@@ -87,52 +74,83 @@
                 <a class="dropdown-item" href="#">Another action</a>
                 <a class="dropdown-item" href="#">Something else here</a>
               </div>
-            </div>
+            </span>
+          </span>
+          <span style="height: 40px; width: 66.5px;">
+            <button
+              class="btn"
+              type="button"
+              style="padding: 0; padding-top: 4px; padding-bottom: 4px; height: 65%; width: 65px; background-color: rgb(83, 131, 232); color: white; font-size: 85%; position:"
+            >
+              <span style="position: relative; bottom: 2px">로그인</span>
+            </button>
+          </span>
+        </span>
+      </div>
+      <!-- second line -->
+      <div style="height: 48px">
+        <div style="height: 100%; width: 1250px; margin: 0 auto">
+          <div
+            style="height: 100%; float: left; padding-top: 12px; padding-bottom: 12px; border-bottom: 3px solid white"
+          >
+            <a href="https://naver.com" style="color: white; font-size: 95%"
+              >홈</a
+            >
+          </div>
+          <div
+            style="height: 100%; float: left; padding-top: 12px; padding-bottom: 12px; position: relative; left: 22px;"
+          >
+            <a
+              href="https://naver.com"
+              style="color: rgb(179, 205, 255); font-size: 95%"
+              >잼피언 분석</a
+            >
+          </div>
+          <div
+            style="height: 100%; float: left; padding-top: 12px; padding-bottom: 12px; position: relative; left: 38px;"
+          >
+            <a
+              href="https://naver.com"
+              style="color: rgb(179, 205, 255); font-size: 95%"
+              >통계</a
+            >
+          </div>
+          <div
+            style="height: 100%; float: left; padding-top: 12px; padding-bottom: 12px; position: relative; left: 54px;"
+          >
+            <a
+              href="https://naver.com"
+              style="color: rgb(179, 205, 255); font-size: 95%"
+              >랭킹</a
+            >
+          </div>
+          <div
+            style="height: 100%; float: left; padding-top: 12px; padding-bottom: 12px; position: relative; left: 70px;"
+          >
+            <a
+              href="https://naver.com"
+              style="color: rgb(179, 205, 255); font-size: 95%"
+              >프로관전</a
+            >
+          </div>
+          <div
+            style="height: 100%; float: left; padding-top: 12px; padding-bottom: 12px; position: relative; left: 90px;"
+          >
+            <a
+              href="https://naver.com"
+              style="color: rgb(179, 205, 255); font-size: 95%"
+              >커뮤티니</a
+            >
           </div>
         </div>
       </div>
-      <div style="margin: 0px 98px; height: 48px">
-        <a href="https://naver.com"
-          ><div style="display: inline-block; margin-top: 12px">
-            <span style="color: white">홈</span>
-          </div></a
-        >
-        <a href="https://naver.com"
-          ><div
-            style="display: inline-block; margin-top: 12px; margin-left: 20px"
-          >
-            <span style="color: white">잼피언 분석</span>
-          </div></a
-        >
-        <a href="https://naver.com"
-          ><div
-            style="display: inline-block; margin-top: 12px; margin-left: 20px"
-          >
-            <span style="color: white">통계</span>
-          </div></a
-        ><a href="https://naver.com"
-          ><div
-            style="display: inline-block; margin-top: 12px; margin-left: 20px"
-          >
-            <span style="color: white">랭킹</span>
-          </div></a
-        ><a href="https://naver.com"
-          ><div
-            style="display: inline-block; margin-top: 12px; margin-left: 20px"
-          >
-            <span style="color: white">프로관전</span>
-          </div></a
-        ><a href="https://naver.com"
-          ><div
-            style="display: inline-block; margin-top: 12px; margin-left: 20px"
-          >
-            <span style="color: white">커뮤니티</span>
-          </div></a
-        >
-      </div>
+      <!-- third line -->
       <div style="height: 40px; background-color: rgba(0, 0, 0, 0.5)">
-        <div style="height: 40px; margin: 0px 208px">
-          <span style="font-size: 12px; color: white"
+        <div
+          style="height: 40px; width: 1050px; margin: 0 auto; padding-top: 10px; padding-bottom: 10px"
+        >
+          <span
+            style="font-size: 12px; color: white; position: relative; bottom: 3px"
             >오피지지와 함께하는 '한글날' 기념 로고 공모전. 많은 참여
             부탁드립니다. 9.10.~9.29.</span
           >
@@ -140,24 +158,80 @@
       </div>
     </div>
     <!-- main -->
-    <div
-      style="width: 1080px; height: 1150px; margin: 0px 208px; padding: 0px 0px 120px"
-    >
-      <div style="height:256px; padding: 32px 0px 24px">
-        <div style="height: 200px">
-          <img
-            src="https://attach.s.op.gg/logo/20190910182701.02d5a0a2d3475bd70a773bc1fb21a441.png"
-            style="width: 410px; height: 200px; margin: 0px 334px 0px 334px"
-          />
-        </div>
+    <div style="width: 100vw; height: 1150px; padding: 0px 0px 120px">
+      <!-- Logo -->
+      <div
+        style="height:256px; width: 410px; padding: 32px 0px 24px; margin: 0 auto"
+      >
+        <img
+          src="https://attach.s.op.gg/logo/20190910182701.02d5a0a2d3475bd70a773bc1fb21a441.png"
+          style="width: 410px; height: 200px; position: relative; left: 5px"
+        />
       </div>
-      <div style="text-align: center">
+      <!-- Search Bar -->
+      <div
+        style="width: 620px; margin:0 auto; font-size:85%; background-color: white"
+      >
         <input
-          style="height: 49.8px; width: 624px"
+          style="height: 49.8px; width: 75%; border: 0px"
           type="text"
-          placeholder="소환사명, 소환사명, ..."
+          placeholder="     소환사명, 소환사명, ..."
           src=""
         />
+        <!-- Button trigger modal -->
+        <button
+          type="button"
+          class="btn"
+          style="background-color: rgb(120, 129, 133); height: 10px; width: 30px; position: relative; bottom: 2px;"
+          data-toggle="modal"
+          data-target="#language_select"
+        >
+          <span
+            style="color: white; position: relative; bottom: 12.5px; right: 5.5px; font-size:85%"
+            >KR</span
+          >
+        </button>
+
+        <!-- Modal -->
+        <div
+          class="modal fade"
+          id="language_select"
+          tabindex="-1"
+          role="dialog"
+          aria-labelledby="exampleModalLabel"
+          aria-hidden="true"
+        >
+          <div class="modal-dialog" role="document">
+            <div class="modal-content">
+              <div class="modal-header">
+                <h5 class="modal-title" id="exampleModalLabel">Modal title</h5>
+                <button
+                  type="button"
+                  class="close"
+                  data-dismiss="modal"
+                  aria-label="Close"
+                >
+                  <span aria-hidden="true">&times;</span>
+                </button>
+              </div>
+              <div class="modal-body">
+                ...
+              </div>
+              <div class="modal-footer">
+                <button
+                  type="button"
+                  class="btn btn-secondary"
+                  data-dismiss="modal"
+                >
+                  Close
+                </button>
+                <button type="button" class="btn btn-primary">
+                  Save changes
+                </button>
+              </div>
+            </div>
+          </div>
+        </div>
       </div>
       <div
         style="width: 970px; height: 250px; margin-left: 60px; margin-top: 30px"
@@ -504,5 +578,30 @@
         </div>
       </div>
     </div>
+
+    <!-- Bootstrap -->
+    <link
+      rel="stylesheet"
+      href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
+      integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T"
+      crossorigin="anonymous"
+    />
+    <script
+      src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
+      integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
+      crossorigin="anonymous"
+    ></script>
+    <script
+      src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
+      integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
+      crossorigin="anonymous"
+    ></script>
+    <script
+      src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
+      integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
+      crossorigin="anonymous"
+    ></script>
+    <!-- Font Awesome -->
+    <script src="https://use.fontawesome.com/releases/v5.2.0/js/all.js"></script>
   </body>
 </html>
