--- a/태연Pjt/opgg.html
+++ b/태연Pjt/opgg.html
@@ -6,11 +6,11 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>롤 전적 검색 OP.GG - 전적 검색 사이트</title>
     <style>
-      .header_flex {
+      .flex {
         width: 100%;
       }
       @media (max-width: 1080px) {
-        .header_flex {
+        .flex {
           width: 1060px;
         }
       }
@@ -18,7 +18,7 @@
   </head>
   <body style="width:100%; background-color: #5383e8;">
     <!-- header -->
-    <header class="header_flex">
+    <div class="flex">
       <!-- first line -->
       <div style="height: 39px; width: 100%; background-color: #232f46;">
         <div
@@ -166,9 +166,9 @@
           >
         </div>
       </div>
-    </header>
+    </div>
     <!-- main -->
-    <div style="width: 100%; height: 1057px; margin: 0 auto;">
+    <div class="flex" style="height: 1057px; margin: 0 auto;">
       <!-- Logo -->
       <div
         style="height:256px; width: 410px; padding: 32px 0px 24px; margin: 0 auto"
