--- a/태연Pjt/op.gg_statistics.html
+++ b/태연Pjt/op.gg_statistics.html
@@ -5,12 +5,51 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>챔피언별 게임 통계 - League of Legend</title>
+    <style>
+      .flex {
+        width: 100%;
+      }
+      @media (max-width: 1100px) {
+        .flex {
+          width: 1100px;
+        }
+      }
+      @media (min-width: 1919px) {
+        .full_screen {
+          position: relative;
+          bottom: 250px;
+        }
+      }
+      .second_header {
+        width: 1320px;
+      }
+      @media (max-width: 1315px) and (min-width: 1100px) {
+        .second_header {
+          width: 100%;
+        }
+      }
+      .search_flex {
+        float: right;
+      }
+      @media (max-width: 1100px) {
+        .search_flex {
+          float: left;
+          position: relative;
+          left: 465px;
+        }
+      }
+      @media (max-width: 1919px) {
+        .ad_display {
+          display: none;
+        }
+      }
+    </style>
   </head>
-  <body style="background-color: rgb(234, 234, 234)">
+  <body style="background-color: rgb(234, 234, 234);">
     <!-- header -->
     <div>
       <!-- first line -->
-      <div style="height: 39px; background-color: #232f46;">
+      <div class="flex" style="height: 39px; background-color: #232f46;">
         <div
           style="height: 100%; width: 97px; padding-top: 10px; padding-bottom: 10px; background-color: #5383e8; float: left;"
         >
@@ -89,7 +128,7 @@
       </div>
       <!-- second line -->
       <div style="height: 48px; background-color: rgb(83, 131, 232)">
-        <div style="height: 100%; width: 1250px; margin: 0 auto">
+        <div class="second_header" style="height: 100%; margin: 0 auto;">
           <div
             style="height: 100%; float: left; padding-top: 12px; padding-bottom: 12px;"
           >
@@ -142,25 +181,114 @@
               >커뮤티니</a
             >
           </div>
-          <div
-            style="width: 340px; height: 100%; padding-top: 8px; padding-bottom: 8px; float: right"
+          <!-- search bar -->
+          <span
+            class="search_flex"
+            style="width: 360px; height: 100%; padding-top: 8px; padding-bottom: 8px; padding-right: 20px;"
           >
             <div
               style="width: 100%; height: 100%; background-color: white; border-radius: 5px"
-            ></div>
-          </div>
+            >
+              <span class="dropdown">
+                <button
+                  class="btn"
+                  style="width: 16.5%; height: 100%; background-color: rgb(236, 242, 255); padding: 0px; position: relative; bottom: 1px;"
+                  type="button"
+                  id="dropdownlanguage"
+                  data-toggle="dropdown"
+                  aria-haspopup="true"
+                  aria-expanded="false"
+                >
+                  <span
+                    style="font-size: 82%; font-weight: 500; color: rgb(65, 113, 214); position: relative; right: 1px; bottom: 1px"
+                    >KR</span
+                  >
+                  <i
+                    class="fas fa-caret-down"
+                    style="color: rgb(65, 113, 214); position: relative; bottom: 2px; width: 12px; height: 12px;"
+                  ></i>
+                </button>
+                <div class="dropdown-menu" aria-labelledby="dropdownlanguage">
+                  <a class="dropdown-item" href="#">Action</a>
+                  <a class="dropdown-item" href="#">Another action</a>
+                  <a class="dropdown-item" href="#">Something else here</a>
+                </div>
+              </span>
+              <span>
+                <input
+                  style="height: 100%; width: 67%; border: 0px; outline: none; font-size: 76%; position: relative; left: 5px"
+                  type="text"
+                  placeholder=" 소환사명, 소환사명, ..."
+                  src=""
+                />
+              </span>
+              <button
+                class="btn"
+                type="button"
+                style="width: 47px; height: 100%; float:right; padding: 7px"
+                aria-haspopup="true"
+                aria-expanded="false"
+              >
+                <img
+                  src="https://opgg-static.akamaized.net/images/gnb/svg/00-icon-gg.svg"
+                  style="width: 100%; height: 100%; position: relative; right: 3.5px; bottom: 7px;"
+                />
+              </button>
+            </div>
+          </span>
         </div>
       </div>
       <!-- third line -->
       <div style="height: 40px; background-color: rgba(0, 0, 0, 0.5)">
         <div
-          style="height: 40px; width: 1050px; margin: 0 auto; padding-top: 10px; padding-bottom: 10px"
+          style="height: 40px; width: 1100px; margin: 0 auto; padding-top: 10px; padding-bottom: 10px"
         >
           <span
             style="font-size: 12px; color: white; position: relative; bottom: 3px"
             >오피지지와 함께하는 '한글날' 기념 로고 공모전. 많은 참여
             부탁드립니다. 9.10.~9.29.</span
           >
+        </div>
+      </div>
+    </div>
+    <!-- main -->
+    <!-- left Ad banner -->
+    <img
+      class="ad_display"
+      src="https://cdn1.vntsm.com/OP.GG+House+Ads+26072019/300x250_en.png"
+      style="position: relative; left: 46px; top: 30px;"
+    />
+    <!-- right Ad banner -->
+    <img
+      class="ad_display"
+      src="https://cdn1.vntsm.com/OP.GG+House+Ads+26072019/300x250_en.png"
+      style="position: relative; left: 1250px; top: 30px;"
+    />
+    <img
+      class="ad_display"
+      src="https://cdn1.vntsm.com/OP.GG+House+Ads+26072019/300x250_en.png"
+      style="position: relative; left: 945px; top: 305px;"
+    />
+    <!-- center -->
+    <div class="flex">
+      <div
+        class="full_screen"
+        style="width: 970px; height: 2000px; margin: 0 auto;"
+      >
+        <!-- Ad banner -->
+        <img
+          src="https://crcdn01.adnxs.com/creative/p/806/2019/9/16/14149157/ca901b30-d08d-4188-8612-de7938f00e8e.jpg"
+          style="position: relative; top: 20px"
+        />
+        <div
+          style="width: 100%; height: 140px; padding-top: 28px; position: relative; top: 20px;"
+        >
+          <div style="width: 100%;">
+            게임통계
+          </div>
+          <div>
+            챔피언별 통계를 볼 수 있습니다
+          </div>
         </div>
       </div>
     </div>
