--- a/태연Pjt/op.gg_ranking.html
+++ b/태연Pjt/op.gg_ranking.html
@@ -4,7 +4,10 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <title>챔피언별 게임 통계 - League of Legend</title>
+    <title>
+      소환사 래더 랭킹 :: 롤 전적 검색 OP.GG - 전적 검색, 관전, 리플레이, 챔피언
+      공략, 카운터, 랭킹
+    </title>
     <style>
       .flex {
         width: 100%;
@@ -203,7 +206,7 @@
         top: 10px;
       }
       .footer_text {
-        font-size: 12px; 
+        font-size: 12px;
         margin-left: 16px;
       }
     </style>
@@ -443,7 +446,7 @@
         <!-- Page description -->
         <div
           class="full_adjust"
-          style="width: 100%; height: 140px; padding-top: 25px;"
+          style="width: 100%; height: 140px; padding-top: 27px;"
         >
           <div
             style="width: 100%; height: 53px; border-bottom: 1px solid rgb(215, 218, 218)"
@@ -452,10 +455,10 @@
               style="float: left; padding-bottom: 12px; border-bottom: 1px solid black"
             >
               <a
-                href="./op.gg_statistics.html"
+                href="./op.gg_ranking.html"
                 style="color: rgb(85, 94, 94); font-size: 170%; font-weight: 700; text-decoration: none;"
               >
-                챔피언별 게임 통계
+                랭킹
               </a>
             </div>
             <div
@@ -465,13 +468,31 @@
                 href="..."
                 style="color:rgb(85, 94, 94); font-size: 170%; text-decoration: none"
               >
-                티어별 게임 통계
+                챔피언
               </a>
+            </div>
+            <div
+              style="float: left; padding-bottom: 12px; position: relative; left: 70px;"
+            >
+              <a
+                href="..."
+                style="color:rgb(85, 94, 94); font-size: 170%; text-decoration: none"
+              >
+                레벨
+              </a>
+            </div>
+            <div style="width: 285px; height: 37px; float: right; position: relative; top: 5px;">
+              <input placeholder="   소환사명" style="width: 195px; height: 100%; border: 1px solid rgb(213, 216, 216); font-size: 85%; font-weight: lighter"/>
+              <button style="width: 83px; height: 100%; font-size: 80%; position: relative; left: 4px; background-color: rgb(31, 142, 205); 
+              border: 1px solid rgb(26, 120, 174); border-radius: 2px; color:white">랭킹검색</button>
             </div>
           </div>
           <div style="height: 45px; padding-top: 14px;">
             <span style="font-size: 88%; color: rgb(74, 74, 74)">
-              챔피언별 통계를 볼 수 있습니다.
+                소환사의 협곡에 총 3,638,198명의 소환사가 있습니다.
+            </span>
+            <span style="font-size: 75%; color: rgb(155, 155, 155); float: right; position: relative; top: 3px;">
+                랭킹은 브론즈 이상 소환사만 표시. 랭킹은 주기적으로 갱신됩니다.
             </span>
           </div>
         </div>
