--- a/태연Pjt/opgg.html
+++ b/태연Pjt/opgg.html
@@ -90,7 +90,7 @@
             <button
               class="btn"
               type="button"
-              style="padding: 0; padding-top: 4px; padding-bottom: 4px; height: 65%; width: 65px; background-color: rgb(83, 131, 232); color: white; font-size: 85%; position:"
+              style="padding: 0; padding-top: 4px; padding-bottom: 4px; height: 65%; width: 65px; background-color: rgb(83, 131, 232); color: white; font-size: 85%;"
             >
               <span style="position: relative; bottom: 2px">로그인</span>
             </button>
